// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call remove on close button click 1`] = `
<div>
  <div
    class="alert-container  mko_13trn4w-container"
  >
    <div
      class="alert alert--error  mko_13trn4w-alert  mko_13trn4w-error"
    >
      <div
        class="alert__content  mko_13trn4w-alert__content"
      >
        <div
          class="alert__message  mko_13trn4w-alert__message"
        >
          <div
            class="alert__icon  mko_13trn4w-alert__icon"
          />
          <div
            class="alert__title  mko_13trn4w-alert__title"
          >
            Test message
          </div>
          <div
            class="alert__actions  mko_13trn4w-alert__actions"
          >
            <button
              class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard alert__expand"
              type="button"
            >
              Details
            </button>
            <button
              aria-label="Close Alert"
              class="button ripple button--icon  mko_c5ujei-button  mko_c5ujei-button_icon alert__close  mko_13trn4w-close"
              icon="❌︎"
              type="button"
            />
          </div>
        </div>
        <div
          class="alert__details  mko_13trn4w-alert__details"
        >
          More words
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should expand alert on click 1`] = `
<div>
  <div
    class="alert-container  mko_13trn4w-container"
  >
    <div
      class="alert alert--error  mko_13trn4w-alert  mko_13trn4w-error"
    >
      <div
        class="alert__content  mko_13trn4w-alert__content"
      >
        <div
          class="alert__message  mko_13trn4w-alert__message"
        >
          <div
            class="alert__icon  mko_13trn4w-alert__icon"
          />
          <div
            class="alert__title  mko_13trn4w-alert__title"
          >
            Test message
          </div>
          <div
            class="alert__actions  mko_13trn4w-alert__actions"
          >
            <button
              class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard alert__expand"
              type="button"
            >
              Details
            </button>
            <button
              aria-label="Close Alert"
              class="button ripple button--icon  mko_c5ujei-button  mko_c5ujei-button_icon alert__close  mko_13trn4w-close"
              icon="❌︎"
              type="button"
            />
          </div>
        </div>
        <div
          class="alert__details  mko_13trn4w-alert__details"
        >
          More words
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should expand alert on click 2`] = `
<div>
  <div
    class="alert-container  mko_13trn4w-container"
  >
    <div
      class="alert alert--error  mko_13trn4w-alert  mko_13trn4w-error"
    >
      <div
        class="alert__content alert__content--is-expanded  mko_13trn4w-alert__content  mko_13trn4w-alert__content_expanded"
      >
        <div
          class="alert__message  mko_13trn4w-alert__message"
        >
          <div
            class="alert__icon  mko_13trn4w-alert__icon"
          />
          <div
            class="alert__title  mko_13trn4w-alert__title"
          >
            Test message
          </div>
          <div
            class="alert__actions  mko_13trn4w-alert__actions"
          >
            <button
              aria-label="Close Alert"
              class="button ripple button--icon  mko_c5ujei-button  mko_c5ujei-button_icon alert__close  mko_13trn4w-close"
              icon="❌︎"
              type="button"
            />
          </div>
        </div>
        <div
          class="alert__details  mko_13trn4w-alert__details"
        >
          More words
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render container when has alerts 1`] = `
<div>
  <div
    class="alert-container  mko_13trn4w-container"
  >
    <div
      class="alert alert--error  mko_13trn4w-alert  mko_13trn4w-error"
    >
      <div
        class="alert__content  mko_13trn4w-alert__content"
      >
        <div
          class="alert__message  mko_13trn4w-alert__message"
        >
          <div
            class="alert__icon  mko_13trn4w-alert__icon"
          />
          <div
            class="alert__title  mko_13trn4w-alert__title"
          >
            Test message
          </div>
          <div
            class="alert__actions  mko_13trn4w-alert__actions"
          >
            <button
              class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard alert__expand"
              type="button"
            >
              Details
            </button>
            <button
              aria-label="Close Alert"
              class="button ripple button--icon  mko_c5ujei-button  mko_c5ujei-button_icon alert__close  mko_13trn4w-close"
              icon="❌︎"
              type="button"
            />
          </div>
        </div>
        <div
          class="alert__details  mko_13trn4w-alert__details"
        >
          More words
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render null when no alerts present 1`] = `null`;
